--- a/calculator/calculator/src/components/button.css
+++ b/calculator/calculator/src/components/button.css
@@ -11,6 +11,7 @@ button {
   
   button:hover {
     background-color: rgb(61, 43, 184);
+    transition: all ease-in-out 350ms;
   }
   
   .equals {
