--- a/calculator/calculator/src/components/button.css
+++ b/calculator/calculator/src/components/button.css
@@ -1,17 +1,19 @@
 button {
     border: none;
-    background:linear-gradient(rgba(96, 77, 222, 0.497),rgb(80, 60, 209)) ;
+    background:linear-gradient(rgba(123, 104, 246, 0.97),rgb(80, 60, 209)) ;
     font-size: 24px;
     color: rgb(255, 255, 255);
     font-weight: bold;
     cursor: pointer;
     border-radius: 10px;
     outline: none;
+    transition: all ease-in-out 550ms;
+
   }
   
   button:hover {
-    background-color: rgb(61, 43, 184);
-    transition: all ease-in-out 350ms;
+    background:linear-gradient(rgb(80, 60, 209),rgba(123, 104, 246, 0.97)) ;
+    transition: all ease-in-out 550ms;
   }
   
   .equals {
