--- a/calculator/calculator/src/components/button.css
+++ b/calculator/calculator/src/components/button.css
@@ -1,19 +1,31 @@
 button {
-    border: none;
+    border-left:3px solid rgba(131, 121, 195, 0.774);
+    border-top:3px solid rgba(131, 121, 195, 0.774);
+    border-bottom:3px solid rgba(38, 37, 43, 0.794);
+    border-right:3px solid rgba(38, 37, 43, 0.794);
+
+
+
     background:linear-gradient(rgba(123, 104, 246, 0.97),rgb(80, 60, 209)) ;
     font-size: 24px;
     color: rgb(255, 255, 255);
     font-weight: bold;
-    cursor: pointer;
+    
     border-radius: 10px;
     outline: none;
-    transition: all ease-in-out 550ms;
+    transition: all ease-in-out 350ms;
 
   }
   
   button:hover {
     background:linear-gradient(rgb(80, 60, 209),rgba(123, 104, 246, 0.97)) ;
-    transition: all ease-in-out 550ms;
+    text-shadow: 10px 10px 10px #000;
+    transition: all ease-in-out 350ms;
+    border-right:3px solid rgba(131, 121, 195, 0.774);
+    border-bottom:3px solid rgba(131, 121, 195, 0.774);
+    border-left:3px solid rgba(38, 37, 43, 0.794);
+    border-top:3px solid rgba(38, 37, 43, 0.794);
+
   }
   
   .equals {
