--- a/calculator/calculator/src/components/buttonBox.css
+++ b/calculator/calculator/src/components/buttonBox.css
@@ -5,4 +5,6 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
   grid-gap: 10px;
+  transition: all ease-in-out 350ms;
+
 }
