--- a/new/src/Components/wrapper.css
+++ b/new/src/Components/wrapper.css
@@ -1,11 +1,14 @@
 .wrapper{
-    height: 65vh;
-    width:40vw;
+    height: 100vh;
+    width:100vw;
+    
     background:black;
 
     position:relative;
     
-    left:20vw;
-    top:10vh;
-    border-radius: 10px;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    
+    
+   
 }
