--- a/new/src/App.css
+++ b/new/src/App.css
@@ -2,12 +2,11 @@
   text-align: center;
 }
 .board-row{
-  
-  
+  height: 33.33%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   position: relative;
   
   
-}
-#top-left-box{
-  border-top-left-radius: 10px;
 }
