--- a/new/src/Components/wrapper.css
+++ b/new/src/Components/wrapper.css
@@ -1,13 +1,15 @@
 .wrapper{
-    height: 100vh;
-    width:100vw;
+    height: 50vh;
+    width:40vw;
+    left: 50vh;
+    top: 25vh;
     
     background:black;
 
     position:relative;
     
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    overflow: hidden;
     
     
    
