--- a/new/src/App.css
+++ b/new/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+.board-row{
+  height: 33.33%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  
+  
+}
