--- a/new/src/Components/box.css
+++ b/new/src/Components/box.css
@@ -10,6 +10,7 @@
     background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
                 radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
     border: none;
-    font-size: 20px;
+    font-size: 50px;
+    transition: all ease-in-out 350ms;
     font-weight: 900;
 }
