--- a/new/src/Components/box.css
+++ b/new/src/Components/box.css
@@ -7,10 +7,10 @@
     height: 100%;
     
     color: aliceblue;
-    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+    background: radial-gradient(circle at 24.1% 68.8%, rgb(50, 50, 50) 0%, rgb(0, 0, 0) 99.4%);
     border: none;
     font-size: 50px;
     transition: all ease-in-out 350ms;
     font-weight: 900;
+    text-shadow: 5px 3px 5px rgb(78, 78, 63);
 }
