--- a/new/src/Components/wrapper.css
+++ b/new/src/Components/wrapper.css
@@ -2,7 +2,7 @@
     height: 50vh;
     width:40vw;
     left: 30vw;
-    top: 25vh;
+    top: 10vh;
     border-radius: 20px;
     
     background:transparent;
@@ -17,6 +17,8 @@
 }
 .status{
     padding: 30px;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
+    font-weight: 800;
+    font-family: Arial, Helvetica, sans-serif;
 }
