--- a/new/src/Components/wrapper.css
+++ b/new/src/Components/wrapper.css
@@ -22,3 +22,9 @@
     font-weight: 800;
     font-family: Arial, Helvetica, sans-serif;
 }
+@media (min-width:767px) {
+    .wrapper{
+        width: 50vw;
+        height: 40vh;
+    }
+}
