--- a/new/src/index.css
+++ b/new/src/index.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: scribble;
+  src: url(./RubikScribble-Regular.ttf);
+}
 body {
   margin: 0;
   min-height: 100vh;
@@ -10,7 +14,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.status{
+  font-family: scribble;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
