--- a/new/src/Components/wrapper.css
+++ b/new/src/Components/wrapper.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: scribble;
-    src: url(./RubikScribble-Regular.ttf);
+    src: url(./EduNSWACTFoundation-VariableFont_wght.ttf);
   }
 .wrapper{
     height: 50vh;
