--- a/new/src/Components/wrapper.css
+++ b/new/src/Components/wrapper.css
@@ -25,6 +25,7 @@
     text-align: center;
     font-weight: 800;
     font-family: scribble;
+    text-shadow:5px 5px 5px beige;
 
 }
 @media (max-width:767px) {
