--- a/new/src/Components/wrapper.css
+++ b/new/src/Components/wrapper.css
@@ -26,7 +26,7 @@
     font-weight: 800;
     font-family: scribble;
     text-shadow:5px 2px 5px beige;
-    color:rgb(72, 52, 3);
+    color:rgba(72, 52, 3,0.5);
 
 }
 @media (max-width:767px) {
