--- a/new/src/index.css
+++ b/new/src/index.css
@@ -1,4 +1,7 @@
-
+@font-face {
+  font-family: scri;
+  src: url(./RubikScribble-Regular.ttf);
+}
 body {
   margin: 0;
   min-height: 100vh;
@@ -11,6 +14,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
+}
+.box{
+  font-family: scri;
+
 }
 
 code {
