--- a/calculatorr/src/components/wrapper.css
+++ b/calculatorr/src/components/wrapper.css
@@ -6,7 +6,13 @@
     background-color: #485461;
   background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
   transition: all ease-in-out 550ms;
+  align-self: center;
 
+}
+@media (max-width:375px) {
+  .wrapper{
+    width:300px;
+  }
 }
 .equalss{
   width: 320%;
