--- a/calculatorr/src/components/screen.css
+++ b/calculatorr/src/components/screen.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: calculator;
+  src: url(./digital-7.ttf);
+}
 .screen {
     height: 100px;
     width: 100%;
@@ -13,5 +17,7 @@
     font-weight: bold;
     box-sizing: border-box;
     transition: all ease-in-out 550ms;
+    font-family: calculator;
+
 
   }
