--- a/weather/src/Components/Wrapper.css
+++ b/weather/src/Components/Wrapper.css
@@ -2,7 +2,7 @@
     min-height: 100vh;
     min-width: 100vw;
     margin:0;padding:0;
-    background-image: url(./Images/michael-diane-weidner-h-rP5KSC2W0-unsplash.jpg);
+    background-image: url(./Images/Background\ \(2\).jpg);
     background-size: cover;
     background-position: center;
 }
