--- a/weather/src/Components/dateTime.css
+++ b/weather/src/Components/dateTime.css
@@ -3,7 +3,27 @@
     src: url(./Fonts/Poppins-Black.ttf);
 }
 .dateTime{
-    backdrop-filter: blur(10px);
-    width: fit-content;
+    width: 20%;
     color: #e9e9e9;
+    font-family: poppins;
+    margin-left: 30px;
+    border-radius: 10px;
+    transform: rotate(270deg);
+    position: relative;
+    /* left: -330px; */
+    top: 300px;
+
+
+
+}
+.day{
+    font-size: 6vw;
+    text-shadow: 5px 5px 3px rgba(0,0,0,0.5);
+    margin-left: 30px;
+    border-radius: 10px;
+    text-align: left;
+    padding: 10px;
+
+    
+    /* letter-spacing: 1px; */
 }
