--- a/weather/src/Components/dateTime.css
+++ b/weather/src/Components/dateTime.css
@@ -10,20 +10,20 @@
     border-radius: 10px;
     transform: rotate(270deg);
     position: relative;
-    /* left: -330px; */
-    top: 300px;
+    left: -90px;
+    top: 15vw;
 
 
 
 }
 .day{
-    font-size: 6vw;
+    font-size: 3vw;
     text-shadow: 5px 5px 3px rgba(0,0,0,0.5);
-    margin-left: 30px;
+    /* margin-left: 30px; */
     border-radius: 10px;
-    text-align: left;
+    text-align: center;
     padding: 10px;
-
+    left: -30px;
     
     /* letter-spacing: 1px; */
 }
