--- a/weather/src/Components/dateTime.css
+++ b/weather/src/Components/dateTime.css
@@ -8,22 +8,39 @@
     font-family: poppins;
     margin-left: 30px;
     border-radius: 10px;
-    transform: rotate(270deg);
     position: relative;
-    left: -90px;
-    top: 15vw;
+    /* left: -10vw;*/
+    top: 20rem; 
+    display: flex;
+    flex-direction: column;
 
 
 
 }
 .day{
-    font-size: 3vw;
+    font-size: 3rem;
     text-shadow: 5px 5px 3px rgba(0,0,0,0.5);
     /* margin-left: 30px; */
     border-radius: 10px;
     text-align: center;
     padding: 10px;
-    left: -30px;
+    left: -5rem;
+    transform: rotate(270deg);
+    height: 60%;
+    position: relative;
+    top: -6rem;
+    width: 100%;
+    display: flex;
+    flex-grow: 3;
+    flex-wrap: wrap;
     
     /* letter-spacing: 1px; */
+}
+.time{
+    height:40%;
+    width: 50%;
+    padding: 30px;
+    font-size: 1.5rem;
+    text-shadow: 5px 5px 3px rgba(0,0,0,0.8);
+
 }
