--- a/weather/src/Components/dateTime.css
+++ b/weather/src/Components/dateTime.css
@@ -41,6 +41,7 @@
     width: 50%;
     padding: 30px;
     font-size: 1.5rem;
-    text-shadow: 5px 5px 3px rgba(0,0,0,0.8);
+    text-shadow: 5px 5px 3px rgba(0,0,0,0.3);
+    opacity: 0.8;
 
 }
