--- a/weather/src/Components/SearchButton.css
+++ b/weather/src/Components/SearchButton.css
@@ -1,4 +1,31 @@
+.search{
+    display: flex;
+    position: relative;
+    width: fit-content;
+    left:60rem;
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px #000;
+}
 .search button{
-    background: url(./Images/search-icon.svg);
+    background: transparent;
+    backdrop-filter: blur(10px);
+    border: none;
     height: 40px;
 }
+.search input{
+    background: transparent;
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border-left: none;
+    border-top: none;
+    color: #e9e9e9;
+    
+}
+::placeholder {
+    color: #e9e9e9;
+    opacity: 1; /* Firefox */
+  }
+  
+  ::-ms-input-placeholder { /* Edge 12 -18 */
+    color: #e9e9e9;
+  }
