--- a/weather/src/Components/SearchButton.css
+++ b/weather/src/Components/SearchButton.css
@@ -1,16 +1,25 @@
+@font-face {
+    font-family: ox;
+    src: url(./Fonts/Oxygen-Light.ttf);
+}
 .search{
     display: flex;
     position: relative;
     width: fit-content;
     left:60rem;
-    border-radius: 5px;
+    top: -10rem;
+    border-radius: 10px;
     box-shadow: 3px 3px 5px #000;
+    margin: 0 10px;
 }
 .search button{
     background: transparent;
     backdrop-filter: blur(10px);
     border: none;
     height: 40px;
+    transition: all ease-in-out 350ms;
+    
+
 }
 .search input{
     background: transparent;
@@ -19,11 +28,24 @@
     border-left: none;
     border-top: none;
     color: #e9e9e9;
+    padding:0px 20px  ;
+    font-family: ox;
+
+
     
 }
+.search button:hover{
+    color: #e9e9e9;
+    transform: rotate(360deg) scale(1.3);
+    transition: all ease-in-out 350ms;
+}
+
 ::placeholder {
     color: #e9e9e9;
     opacity: 1; /* Firefox */
+    font-size: larger;
+    font-family: ox;
+
   }
   
   ::-ms-input-placeholder { /* Edge 12 -18 */
