--- a/weather/src/Components/Weather.css
+++ b/weather/src/Components/Weather.css
@@ -2,6 +2,10 @@
     font-family: poppins;
     src: url(./Fonts/Poppins-Black.ttf);
 }
+@font-face {
+    font-family: oxy;
+    src: url(./Fonts/Oxygen-Light.ttf);
+}
 .main-content{
     width: 80%;
     position: relative;
@@ -31,4 +35,42 @@
 }
 .tempp-details{
     color: #e9e9e9;
+}
+.parent-info{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    left: 4rem;
+    flex-wrap: wrap;
+}
+.Weather-type{
+    position: relative;
+    left: 10rem;
+}
+.info{
+    backdrop-filter: blur(5px);
+    right: 5rem;
+    position: relative;
+    font-size: 1.7rem;
+    font-family: oxy;
+    font-weight: 800;
+    bottom: 8rem;
+    text-shadow: 3px 3px 3px rgba(0,0,0,0.7);
+    padding: 0 20px;
+    border-radius: 30px;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.7);
+    border-top: 5px solid #e9e9e913;
+    border-left: 5px solid #e9e9e913;
+    background: url(./Images/—Pngtree—rainwater\ element_5628272.png);
+    background-size: contain;
+
+    
+
+
+}
+.Weather-type{
+    font-size: 2.5rem;  
+    font-family: oxy; 
+    text-shadow: 3px 3px 3px #000; 
+    font-weight: 800;
 }
