--- a/weather/src/Components/Weather.css
+++ b/weather/src/Components/Weather.css
@@ -48,7 +48,7 @@
     left: 10rem;
 }
 .info{
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
     right: 5rem;
     position: relative;
     font-size: 1.7rem;
@@ -73,4 +73,13 @@
     font-family: oxy; 
     text-shadow: 3px 3px 3px #000; 
     font-weight: 800;
+    transition: all ease-in-out 350ms;
+    height: fit-content;
+
+}
+.Weather-type:hover{
+    letter-spacing: 1px;
+    text-shadow: 5px 5px 5px #000; 
+    transition: all ease-in-out 350ms;
+
 }
