--- a/weather/src/Components/Wrapper.css
+++ b/weather/src/Components/Wrapper.css
@@ -1,5 +1,5 @@
 .Wrapper{
-    height: 100%;
+    min-height: 100vh;
     min-width: 100vw;
     margin:0;padding:0;
     /* background-image: url(./Images/Background\ \(2\).jpg); */
