--- a/weather/src/index.css
+++ b/weather/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   overflow-x: hidden;
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
+  width: 100vw;
   background:url(./Components/Images/Background\ \(2\).jpg);
   background-size: cover;
   background-position: center;
