--- a/weather/src/Components/Wrapper.css
+++ b/weather/src/Components/Wrapper.css
@@ -23,8 +23,8 @@
 @media (max-width:768px) {
     .subWrapper{
         margin: 0;
-        height: 100%;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
         border-radius: 0px;
     }
 }
