--- a/weather/src/Components/Wrapper.css
+++ b/weather/src/Components/Wrapper.css
@@ -26,6 +26,6 @@
         height: 100vh;
         width: 100vw;
         border-radius: 0px;
-        background-size: contain;
+        background-size: auto;
     }
 }
