--- a/weather/src/Components/Weather.css
+++ b/weather/src/Components/Weather.css
@@ -86,7 +86,7 @@
 @media (max-width:768px) {
     .search{
         transform: translateX(0rem);
-        left: 0;
+        left: -3rem;
 
     }
 }
