--- a/weather/src/Components/Wrapper.css
+++ b/weather/src/Components/Wrapper.css
@@ -30,8 +30,7 @@
     }
     .Wrapper{
         background: url(./Images/clouds.jpg);
-        background-size: cover;
-        background-repeat:no-repeat;
-        background-position: center;
+        background-size: 100%;
+        background-repeat:repeat;
     }
 }
