--- a/weather/src/index.css
+++ b/weather/src/index.css
@@ -8,3 +8,8 @@ body {
   background-position: center;
   user-select: none;
 }
+@media (max-width:768px) {
+  body{
+    overflow-x: hidden;
+  }
+}
