--- a/weather/src/index.css
+++ b/weather/src/index.css
@@ -10,7 +10,7 @@ body {
 }
 @media (max-width:768px) {
   body{
-    overflow-x: hidden;
+    overflow: hidden;
     min-height: 100vh;
     min-width: 100vw;
   }
