--- a/weather/src/Components/dateTime.css
+++ b/weather/src/Components/dateTime.css
@@ -38,7 +38,7 @@
 }
 .time{
     height:40%;
-    width: fit-content;
+    width: 60%;
     padding: 10px;
     font-size: 1.5rem;
     text-shadow: 5px 5px 3px rgba(0,0,0,0.3);
