--- a/weather/src/index.css
+++ b/weather/src/index.css
@@ -9,11 +9,17 @@ body {
   user-select: none;
 }
 
-@media (max-width:768px) {
+@media (max-width:769px) {
   body{
     overflow: hidden;
     min-height: 100vh;
     min-width: 100vw;
+    background:url(./Components/Images/clouds.jpg);
+    background-repeat: no-repeat;
+    
+    background-size: cover;
+    background-position: center;
+
   }
 }
 @media (max-width:426px){
