--- a/login-signup/src/Components/Login.css
+++ b/login-signup/src/Components/Login.css
@@ -2,7 +2,8 @@
     color: aliceblue;
 }
 .login-wrapper{
-    border:1px solid #fff;
+    /* border:1px solid #fff; */
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,13 +14,39 @@
     transform: translateX(-50%);
     top:30vh;
     position: relative;
+    background-image: linear-gradient(45deg, #171120, #FF83cd  );
+    box-shadow: 5px 5px 5px #ffffff5e;
+    border-left:none;
+    border-top:none;
+
 }
-input{
-    float: right;
-}
+
 .login-wrapper h1{
     color: #fff;
 }
+.login-wrapper a{
+    color: #fff;
+}
+.login-content{
+    height: fit-content;
+    width: 100%;
+    padding: 10px;
+
+    
+}
 .login-wrapper label{
     font-size: 1.8rem;
+}
+.login-content input{
+    padding:10px;
+    float: right;
+    border-radius: 15px;
+    background: rgb(255, 255, 255,0.4);
+    border:none;
+    border-top: 5px solid rgba(0,0,0,0.2);
+    border-left:5px solid rgba(0,0,0,0.2) ;
+}
+button{
+    border-radius: 10px;
+    height: 30px;
 }
