--- a/login-signup/src/Components/Signup.css
+++ b/login-signup/src/Components/Signup.css
@@ -10,7 +10,7 @@
     width: fit-content;
     left: 50vw;
     transform: translateX(-50%);
-    top:30vh;
+    /* top:30vh; */
     position: relative;
     background-image: linear-gradient(45deg, #171120, #FF83cd  );
     box-shadow: 5px 5px 5px #ffffff5e;
